# AxiomLauncher

./: Axiom Launcher.sln  README.md
Axiom Launcher/: App.xaml  App.xaml.cs  Axiom Launcher.csproj  CreateProjectWindow.xaml  CreateProjectWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
Axiom Launcher/Project Template/: CMakeLists.txt
Axiom Launcher/Source/SaveLoad/: RegisterySaver.cs
Axiom Launcher/Themes/: ThemeTypes.cs
Axiom Launcher/Utilities/: Command.cs  CommandParam.cs  ScrollViewerHelper.cs
